<resources>
    <string name="app_name">LinuxLearn</string>
    <string name="image">image</string>
    <string name="linux_is_open_source">Linux is Open Source</string>
    <string name="tv_caption">Aplikasi untuk mempelajari pelajaran seputar materi Sistem Operasi dan Linux.</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="welcome_back">Selamat Datang Kembali!</string>
    <string name="caption_login"><![CDATA[Masuk ke akun kalian & Mulai pelajari materi Linux-nya!]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">*********</string>
    <string name="email_hint">Masukkan email anda..</string>
    <string name="or">atau</string>
    <string name="continue_with_google">Lanjutkan dengan Google</string>
    <string name="doesnot_have_account">Belum punya akun?</string>
    <string name="now">sekarang!</string>
    <string name="lets_register">Yuk Daftar!</string>
    <string name="caption_register">Mulai pengalaman belajar seputar Linux yang menyenangkan</string>
    <string name="username">Username</string>
    <string name="username_hint">Masukkan username anda..</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="copyright">© M. Aldhika Yandaputra 2022</string>
    <string name="home">Beranda</string>
    <string name="exercise">Latihan</string>
    <string name="profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat Datang</string>
    <string name="subject_matter">Materi</string>
    <string name="see_all">Lihat Semua</string>
    <string name="change_theme_color">Ubah Warna Tema</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="change_account">Ubah Akun</string>
    <string name="logout">Keluar</string>
    <string name="user_name">Nama Pengguna</string>
    <string name="developer">M. Aldhika Yandaputra</string>
    <string name="settings">Pengaturan</string>
    <string name="read_more">Baca Materi</string>
    <string name="change_account_name">Ubah Nama Akun</string>
    <string name="new_username_hint">Masukkan nama pengguna baru</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="multiple_choice_hint">Pilih salah satu jawaban yang benar!</string>
    <string name="next">Selanjutnya</string>
    <string name="back">Kembali</string>
</resources>