<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/change_theme_color"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/dark_theme"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_theme"/>

    <TextView
        android:id="@+id/tv_change_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/change_account"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dark_theme" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:backgroundTint="#EA2F1F"
        android:drawableStart="@drawable/ic_ri_logout_circle_line"
        android:background="@drawable/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_change_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/tv_change_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_account_name"
            android:textSize="14sp"
            android:padding="14dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorPrimaryVariant" />

        <ImageView
            android:id="@+id/iv_icon_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_baseline_arrow_forward"
            android:contentDescription="@string/image"
            app:tint="?attr/colorPrimaryVariant" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>