<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="?attr/colorPrimaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:src="@drawable/logo_small"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/iv_component"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-8dp"
            android:translationZ="-1dp"
            android:src="@drawable/ic_component_logreg"
            app:tint="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/welcome_back"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="22sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/caption_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_caption" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="?attr/colorOnSecondary"
                android:fontFamily="@font/poppins"
                android:backgroundTint="?attr/colorOnSecondary"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:hint="@string/password_hint"
                android:textColorHint="?attr/colorOnSecondary"
                android:backgroundTint="?attr/colorOnSecondary"
                android:longClickable="true"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:background="@drawable/btn_register"
            app:backgroundTint="?attr/colorSecondary"
            android:text="@string/login"
            android:textColor="#33294C"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp" />

        <View
            android:id="@+id/view"
            android:layout_width="138dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/or"
            android:fontFamily="@font/poppins"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <View
            android:id="@+id/view2"
            android:layout_width="138dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button_google"
            android:drawableStart="@drawable/ic_google_icon"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/btn_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_register_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                android:text="@string/doesnot_have_account"
                android:textColor="?attr/colorOnSecondary"/>

            <TextView
                android:id="@+id/tv_register_mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="?attr/colorSecondary"/>

            <TextView
                android:id="@+id/tv_register_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                android:textColor="?attr/colorOnSecondary"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>